# aiox-squads-FelippePestana

./: .dockerignore  .env.example  .env.production.example  .gitignore  .mcp.json  ACTION_PLAN_TODAY.md  ACTION_PLAN_TODAY_NOTION.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLICKUP_SETUP.md  DEPLOY.md  DESIGN-CLINICA.md  Dockerfile  GA4_QUICK_START.md  INTEGRACAO-AIOX-SQUADS.md  MCP_SETUP_PLAN.md  MINUTA-01-CONTESTACAO-COBRANCA.md  MINUTA-02-CONTESTACAO-TRABALHISTA.md  MINUTA-03-CONTESTACAO-RESPONSABILIDADE-CIVIL.md  MONITORING_SETUP.md  NOTION_TASK_LIST.md  PENDING_TASKS.md  PRODUCTION_LAUNCH_STATUS.md  PRODUCTION_README.md  README.md  RUM_ANALYTICS_SETUP.md  SENTRY_KEYS_SETUP.md  SENTRY_SETUP.md  SPEC.md  TEAM_TRAINING_PLAN.md  ULTRAPLAN.md  UPTIMEROBOT_QUICK_START.md  UPTIME_MONITORING_SETUP.md  WEEK1_PRODUCTION_CHECKLIST.md  analise-processual-14-05-2026.md  docker-compose.chatbot.yml  docker-compose.yml  documentos-exemplo-14-05.md  fix-mcp.sh  (+14 more)
.aiox-core/: core-config.yaml
.claude/: CLAUDE.md  settings.json
.cursor/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
ai-gateway/: .env.local.example  README.md  package-lock.json  package.json
analista-processual-web/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
anmar/: .env.example  .gitignore  middleware.ts  package-lock.json  package.json  tailwind.config.ts
chatbot/: Dockerfile  README.md  package-lock.json  package.json  start.sh  web-start.sh  worker.js  wrangler.toml
clinica-anmar/: index.html  package-lock.json  package.json  tailwind.config.ts
deploy/: Caddyfile  docker-compose.prod.yml
doc/: README.en.md  local-deploy.md  ollama-claude-code.md  open-vsx.md
docs/: 404.html  README.md  (+3 more)
squads/transmissao-multicam/auto-switch-engine/: README.md  pyproject.toml
squads/transmissao-multicam/auto-switch-engine/src/auto_switch/: __init__.py  config.py  engine.py  health.py  main.py  metrics.py  motion.py  osc_feedback.py  supabase_writer.py
squads/transmissao-multicam/auto-switch-engine/tests/: test_config_loader.py  test_engine.py  test_failover.py  test_metrics.py  test_motion_fallback.py  test_osc_feedback.py
(+1167 files in other folders)
