[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tx-multicam-auto-switch"
version = "0.1.0"
description = "F6 — Auto-switch engine for the transmissao-multicam squad. Listens to OBS audio meters, applies VAD per channel, and commands scene switches honoring cooldown and operator override."
requires-python = ">=3.11"
authors = [{ name = "AIOX Community" }]
license = { text = "MIT" }
dependencies = [
    "obsws-python>=1.6.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
tx-auto-switch = "auto_switch.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
